--- a/reveal/index.html
+++ b/reveal/index.html
@@ -51,7 +51,7 @@
 				
 				<!-- FIFTH SLIDE, Mickey Mouse example -->
 				<section>
-					<img src="https://media.giphy.com/media/Yi7cRLab93BhS/giphy.gif"/>
+					<img src="https://media.giphy.com/media/Yi7cRLab93BhS/giphy.gif" style="width:500px;height:500px;"/>
 				</section>
 				
 				<!-- SIXTH SLIDE, how does the multiplane work -->
