--- a/reveal/index.html
+++ b/reveal/index.html
@@ -73,7 +73,14 @@
 						<li> "Snow White and the Seven Dwarfs" was the first and "The Little Mermaid" was the last movie made using this technology</li>
 					</ul>
 				</section>
-				<!-- NINTH SLIDE, Evolution of Animation -->
+				<!-- NINTH SLIDE, the impact of having the MPC -->
+				<section>
+					<h2>How the MPC came about</h2>
+					<p> Before the MPC was invented, animators found it difficult to create tracking shots using the
+						traditional animation style. Animating forward motions became costly and time consuming.
+						The MPC fixed this by creating a realistic sense of depth in a cartoon setting. 
+				</section>
+				<!-- TENTH SLIDE, Evolution of Animation -->
 				<section>
 					<h2> The Evolution of Disney Animation </h2>
 					<dl>
@@ -85,16 +92,9 @@
 							<dd>-Beauty and the Beast, Jungle Book, Maleficent</dd>
 					</dl>
 				</section>
-				<!-- TENTH SLIDE, the impact of having the MPC -->
-				<section>
-					<h2>How the MPC came about</h2>
-					<p> Before the MPC was invented, animators found it difficult to create tracking shots using the
-						traditional animation style. Animating forward motions became costly and time consuming.
-						The MPC fixed this by creating a realistic sense of depth in a cartoon setting. 
-				</section>
 				
-				<!-- ELEVENTH SLIDE -->
-				<section data-background="img/cat1.jpg"></section>
+				<!-- ELEVENTH SLIDE, comparison of beauty and the beast -->
+				<section data-background="https://cdn-images-1.medium.com/max/1000/1*PSLtU4pv5zBYWm8lfPif2Q.jpeg"></section>
 				
 				<!-- TWELTH SLIDE -->
 				<section data-background="img/cat2.jpg"></section>
