--- a/reveal/index.html
+++ b/reveal/index.html
@@ -105,7 +105,7 @@
 				<!-- FOURTEENTH SLIDE, dummy slide idk -->
 				<section>
 					<h2> How would this hold up today? </h2>
-					<img src="http://www.publicdomainpictures.net/pictures/40000/velka/question-mark.jpg"/>
+					<img src="http://www.publicdomainpictures.net/pictures/40000/velka/question-mark.jpg" style="width:500px;height:500px;" />
 				</section>
 				
 				<!-- FIFTHTEENTH SLIDE, i really dont know what to put here. -->
