--- a/reveal/index.html
+++ b/reveal/index.html
@@ -86,7 +86,7 @@
 					<dl>
 						<dt> Cel and Multiplane Animation (1920s-1989)</dt> 
 							<dd>-Cinderella, Alice in Wonderland, Peter Pan</dd>
-						<dt> CGI Animation (1990s-2000s)</dt>
+						<dt> CGI Animation (1990s-Today)</dt>
 							<dd>-Aladdin, Beauty and the Beast, The Lion King</dd>
 						<dt> Live Action (2006-Today) </dt>
 							<dd>-Beauty and the Beast, Jungle Book, Maleficent</dd>
