--- a/reveal/index.html
+++ b/reveal/index.html
@@ -47,7 +47,7 @@
 				
 				<!-- FOURTH SLIDE, cel animation example -->
 				<section>
-					<img src="http://a.scpr.org/i/28966f1db3ad12e503693c27825f376b/108151-full.jpg"/>
+					<img src="http://a.scpr.org/i/28966f1db3ad12e503693c27825f376b/108151-full.jpg" style="width:500px;height:500px;"/>
 					<p> Cel Animation </p>
 				</section>
 				
